add contributors page and contribution graph
